syntax = "proto3";

package wirelessmeshdomain;

/**
* This is where we define our domain, in this case the events that will be stored.
**/

message CustomerLocationAdded {
    string customerLocationId = 1;
    string accessToken = 2;
    string email = 3;
}

message CustomerLocationRemoved {
    string customerLocationId = 1;
}

message DeviceActivated {
    string deviceId = 1;
    string customerLocationId = 2;
}

message DeviceRemoved {
    string deviceId = 1;
    string customerLocationId = 2;
}

message RoomAssigned {
    string deviceId = 1;
    string customerLocationId = 2;
    string room = 3;
}

message NightlightToggled {
    string deviceId = 1;
    string customerLocationId = 2;
    bool nightlightOn = 3;
    string accessToken = 4;
}
