syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "akkaserverless/annotations.proto";

import "domain/wirelessmeshdomain.proto";

package publishing;

service PublishingService {
    rpc PublishCustomerLocationAdded(wirelessmeshdomain.CustomerLocationAdded) returns (wirelessmeshdomain.CustomerLocationAdded) {
        option (akkaserverless.method).eventing = {
            in: {
                event_sourced_entity: "customer-location-entity";
            }
            out: {
                topic: "wirelessmesh";
            }
        };
    }

    // handle other events which are not managed above
    rpc CatchOthers(google.protobuf.Any) returns (google.protobuf.Empty) {
        option (akkaserverless.method).eventing = {
            in: {
                event_sourced_entity:  "customer-location-entity"
            }
        };
    };
}
